Embed fix and footer alignment

--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header {
+    width: 100%;
+}
+
 .header-blue {
     background-color: #1d1f55;
     padding-top: 8px;
@@ -35,5 +46,15 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 90%;
+    width: 95%;
+}
+
+footer {
+    width: 100%;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
